helloworld/k8s/hostpath-nginx.yml
apiVersion: v1
kind: Pod
metadata:
  name: hostpath-nginx
spec:
  containers:
  - name: nginx
    image: nginx
    volumeMounts: # pod's path
    - name: volumepath
      mountPath: /usr/share/nginx/html
  volumes:
  - name: volumepath
    hostPath: # You must check the path placed in node.
      path: /root/hostdir
      type: Directory
