helloworld/k8s/gateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
meatadata:
  name: k8s-gateway
  namespace: k8s-gw
  annotations:
    service.beta.kubernetes.io/port_80_no_probe_rule: "true" # FOR AZURE
spec:
  gatewayClassName: istio
  listeners:
    - name: default
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
